syntax = "proto3";
option go_package = "pb";

message QuorumCertificateS {
    BlockHeaderS header = 1;
    SignatureAggregateS signatureAggregate = 2;
}

message BlockS {
    BlockHeaderS header = 1;
    QuorumCertificateS cert = 2;
    SignatureAggregateS signatureAggregate = 3;
    BlockDataS data = 4;
    repeated TransactionS txs = 5;
}

message BlockHeaderS {
    bytes hash = 1;
    bytes parentHash = 2;
    bytes qcHash = 3;
    bytes dataHash = 4;
    bytes txHash = 5;
    bytes stateHash = 6;
    int32 height = 7;
    int64 timestamp = 8;
}

message BlockDataS {
    bytes data = 1;
}

message TransactionS {
    int32 type = 1;
    bytes to = 2;
    bytes from = 3;
    uint64 nonce = 4;
    int64 value = 5;
    int64 fee = 6;
    SignatureS signature = 7;
    bytes hash = 8;
    bytes data = 9;
}

message SignatureS{
    bytes from = 1;
    bytes signature = 2;
}
message SignatureAggregateS {
    bytes bitmap = 1;
    bytes signature = 2;
}

message Account {
    uint64 nonce = 1;
    bytes value = 2;
    bytes origin = 3;
    repeated bytes voters = 4;
}

message Record {
    bytes snap = 1;
    bytes parent = 2;
    repeated bytes siblings = 3;
}

message Snapshot {
    bytes hash = 1;
    bytes proposer = 2;
    repeated Entry entries = 3;
}

message Entry {
    bytes address = 1;
    bytes account = 2;
}